<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:text="@string/btnInstallDevRake"
            android:id="@+id/btnInstallDevRake"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/btnFlushDevRake"
            android:id="@+id/btnFlushDevRake"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/btnTrackDevRake"
            android:id="@+id/btnTrackDevRake"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/btnInstallLiveRake"
            android:id="@+id/btnInstallLiveRake"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/btnTrackLiveRake"
            android:id="@+id/btnTrackLiveRake"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/btnFlushLiveRake"
            android:id="@+id/btnFlushLiveRake"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</RelativeLayout>
